--- a/package.json
+++ b/package.json
@@ -9,12 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.10.13",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
+    "ahooks": "^3.7.2",
+    "antd": "^4.24.2",
+    "axios": "^1.1.3",
+    "classnames": "^2.3.2",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
     "flat": "^5.0.2",
+    "lodash": "^4.17.21",
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -23,6 +32,7 @@
     "typescript": "4.8.4"
   },
   "devDependencies": {
-    "@types/flat": "^5.0.2"
+    "@types/flat": "^5.0.2",
+    "@types/lodash": "^4.14.189"
   }
 }
