--- a/package.json
+++ b/package.json
@@ -10,26 +10,35 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@chakra-ui/react": "^2.4.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.10.13",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
+    "@walletconnect/auth-client": "^1.0.1",
+    "@walletconnect/jsonrpc-ws-connection": "^1.0.3",
+    "@walletconnect/sign-client": "^2.1.3",
     "ahooks": "^3.7.2",
     "antd": "^4.24.2",
     "axios": "^1.1.3",
     "classnames": "^2.3.2",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
+    "ethers": "^5.7.2",
     "flat": "^5.0.2",
+    "framer-motion": "^7.6.7",
     "lodash": "^4.17.21",
     "next": "13.0.2",
+    "qrcode": "^1.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-zoom-pan-pinch": "^2.1.3",
+    "smart-truncate": "^1.0.1",
     "stability-client": "^1.7.0",
-    "typescript": "4.8.4"
+    "typescript": "4.8.4",
+    "wagmi": "^0.8.5"
   },
   "devDependencies": {
     "@types/flat": "^5.0.2",
