--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
+    "@upstash/redis": "^1.16.1",
     "ahooks": "^3.7.2",
     "antd": "^4.24.2",
     "axios": "^1.1.3",
@@ -24,6 +25,7 @@
     "flat": "^5.0.2",
     "lodash": "^4.17.21",
     "next": "13.0.2",
+    "nft.storage": "^7.0.0",
     "qrcode": "^1.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
