--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-config-next": "13.0.2",
     "ethers": "^5.7.2",
     "flat": "^5.0.2",
+    "ioredis": "^5.2.4",
     "lodash": "^4.17.21",
     "next": "13.0.2",
     "nft.storage": "^7.0.0",
